--- a/app/src/main/res/layout/activity_add_animal.xml
+++ b/app/src/main/res/layout/activity_add_animal.xml
@@ -96,7 +96,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Usia Hewan" />
+            android:hint="Usia Hewan"
+            android:inputType="phone" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
